--- a/.editorconfig
+++ b/.editorconfig
@@ -1,34 +1,82 @@
-# WHY: Ensures consistent formatting across editors and contributors
-# OBS: Default 4 spaces, but Markdown/YAML/JSON use 2
-# REQ: Keep this file for cross-platform formatting consistency
+# REQ.UNIVERSAL: All professional GitHub project repositories MUST include .editorconfig.
+# WHY: Establish a cross-editor baseline (VS Code, PyCharm, Vim, etc.) so diffs stay clean and formatting is consistent.
+# ALT: Repository may omit .editorconfig ONLY if formatting is enforced equivalently by CI + formatter tooling for all contributors or solo projects.
+# CUSTOM: Adjust indent_size defaults only if organizational standards change; keep stable across projects.
 
 root = true
 
 [*]
-charset = utf-8
+# WHY: Normalize line endings and encoding across Windows, macOS, and Linux.
 end_of_line = lf
-indent_style = space
-indent_size = 4  # WHY: Python standard (PEP 8)
+charset = utf-8
+
+# WHY: Newline at EOF avoids noisy diffs and tool warnings.
 insert_final_newline = true
+
+# WHY: Remove accidental whitespace noise in diffs.
 trim_trailing_whitespace = true
 
-# WHY: Markdown uses 2-space indents for nested lists
+# WHY: Default to 2 spaces for configs and many markup files; language-specific overrides follow.
+indent_style = space
+indent_size = 2
+
+# === Markup ===
+
 [*.md]
+# WHY: Keep Markdown clean; use explicit <br> for hard line breaks.
 indent_size = 2
-trim_trailing_whitespace = false  # WHY: Allows 2 spaces for line breaks
+trim_trailing_whitespace = true
 
-# WHY: YAML/JSON tooling expects 2 spaces
-[*.{yml,yaml,json,jsonc}]
+[*.{tex,cls,sty}]
+# WHY: LaTeX convention is 2 spaces.
 indent_size = 2
+indent_style = space
 
-# WHY: JavaScript ecosystem standard is 2 spaces
-[*.{js,ts}]
+[*.xml]
+# WHY: XML convention is 2 spaces.
 indent_size = 2
+indent_style = space
 
-# WHY: PowerShell convention is 4 spaces
-[*.ps1]
-indent_size = 4
+[*.{yml,yaml}]
+# WHY: YAML convention is 2 spaces.
+indent_size = 2
+indent_style = space
 
-# WHY: TOML follows Python convention (4 spaces)
+# === Data and config ===
+
+[*.{json,jsonc,jsonl,ndjson}]
+# WHY: JSON tooling typically expects 2 spaces.
+indent_size = 2
+indent_style = space
+
 [*.toml]
+# WHY: TOML often follows 4-space indentation in many projects.
 indent_size = 4
+indent_style = space
+
+# === Code ===
+
+[*.{js,ts}]
+# WHY: JS/TS ecosystem commonly uses 2 spaces.
+indent_size = 2
+indent_style = space
+
+[*.{py,pyi}]
+# WHY: Python convention is 4 spaces.
+indent_size = 4
+indent_style = space
+
+[*.ps1]
+# WHY: PowerShell convention is 4 spaces.
+indent_size = 4
+indent_style = space
+
+[*.{c,cpp,h,java,cs,go,rs}]
+# WHY: Many C-family and systems languages commonly use 4 spaces (project-dependent).
+indent_size = 4
+indent_style = space
+
+[*.{sh,bash}]
+# WHY: Shell script convention is 2 spaces.
+indent_size = 2
+indent_style = space
