--- a/.gitattributes
+++ b/.gitattributes
@@ -1,38 +1,94 @@
-# WHY: Ensures consistent line endings across Windows, macOS, and Linux
-# WHY: Prevents "every line changed" diffs when collaborators use different OS
-# OBS: Python/shell use LF, PowerShell uses CRLF
-# REQ: Keep this file for cross-platform collaboration
+# REQ.UNIVERSAL: All professional GitHub project repositories MUST include .gitattributes.
+# WHY: Ensure consistent line endings, diff behavior, and repository metadata
+#      across Windows, macOS, and Linux.
+# ALT: Repository may omit .gitattributes ONLY if equivalent normalization is
+#      enforced by tooling and CI (rare and fragile).
+# CUSTOM: Update file-type rules only when introducing new languages or artifact types.
 
-# WHY: Auto-detect text files and normalize line endings
+# WHY: Auto-detect text files and normalize line endings to avoid cross-platform drift.
 * text=auto
 
-# WHY: Python and shell must use LF for CI/CD, Linux, containers
-*.py  text eol=lf
-*.sh  text eol=lf
 
-# WHY: PowerShell convention on Windows
-*.ps1 text eol=crlf
+# === Source Code ===
 
-# WHY: Config files use LF - standard for cross-platform tools
-*.md   text eol=lf
-*.yaml text eol=lf
-*.yml  text eol=lf
-*.json text eol=lf
-*.jsonc text eol=lf
-*.toml text eol=lf
+# WHY: Python and shell scripts must use LF for CI/CD, Linux environments, and containers.
+*.py    text eol=lf
+*.sh    text eol=lf
 
-# WHY: LaTeX files use LF - standard for academic collaboration
-*.tex text eol=lf
-*.bib text eol=lf
-*.cls text eol=lf
-*.sty text eol=lf
+# WHY: PowerShell convention on Windows uses CRLF.
+*.ps1   text eol=crlf
 
-# WHY: Exclude docs/tests from language statistics on GitHub (if applicable)
-# ALT: Uncomment if you have these directories
-# docs/** linguist-documentation
-# tests/** linguist-documentation
 
-# WHY: Jupyter notebooks need special diff/merge handling (if applicable)
-# ALT: Uncomment if using notebooks
-# *.ipynb diff=jupyternotebook
-# *.ipynb merge=jupyternotebook
+# === Markup and Documentation ===
+
+# WHY: Documentation and markup files use LF; standard for cross-platform tooling.
+*.bib   text eol=lf
+*.cls   text eol=lf
+*.md    text eol=lf
+*.sty   text eol=lf
+*.tex   text eol=lf
+
+
+# === Configuration and Data (Text) ===
+
+# WHY: Configuration and structured text formats use LF for stable diffs.
+*.json     text eol=lf
+*.jsonc   text eol=lf
+*.jsonl   text eol=lf
+*.ndjson  text eol=lf
+*.toml    text eol=lf
+*.yaml    text eol=lf
+*.yml     text eol=lf
+
+
+# === GitHub Metadata ===
+
+# WHY: Exclude documentation and tests from GitHub language statistics.
+docs/**   linguist-documentation
+tests/**  linguist-documentation
+
+
+# === Notebooks ===
+
+# WHY: Jupyter notebooks require specialized diff and merge handling.
+*.ipynb   diff=jupyternotebook
+*.ipynb   merge=jupyternotebook
+
+
+# === Databases (Binary) ===
+
+# WHY: Database files are binary; prevent text normalization and meaningless diffs.
+*.db        binary
+*.duckdb   binary
+*.sqlite   binary
+*.sqlite3  binary
+
+
+# === Columnar / Analytical Data (Binary) ===
+
+# WHY: Columnar and analytical data formats are binary; diffs are not meaningful.
+*.arrow    binary
+*.avro     binary
+*.feather  binary
+*.orc      binary
+*.parquet  binary
+
+
+# === Office, BI, and Compressed Artifacts (Binary) ===
+
+# WHY: Office documents, BI files, and compressed artifacts are binary.
+*.7z     binary
+*.bz2    binary
+*.docx   binary
+*.gz     binary
+*.pbix   binary
+*.pbit   binary
+*.pptx   binary
+*.rar    binary
+*.tar    binary
+*.tgz    binary
+*.xls    binary
+*.xlsm   binary
+*.xlsx   binary
+*.xz     binary
+*.zip    binary
