--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,6 @@
 // WHY: Quick access to common build tasks
 // OBS: Press Ctrl+Shift+B (Windows/Linux) or Cmd+Shift+B (Mac) to build all papers
-// ALT: Can also run ./build.ps1 directly in terminal
+// ALT: Can also run ./build.ps1 or ./check.ps1 directly in terminal
 
 {
   "version": "2.0.0",
@@ -16,6 +16,19 @@
       "presentation": {
         "reveal": "always", // WHY: Always show terminal output
         "panel": "new" // WHY: Open in new terminal panel
+      }
+    },
+    {
+      "label": "Check Hygiene",
+      "type": "shell",
+      "command": "./check.ps1",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
       }
     }
   ]
